Make code java 11 compatible (#29)